cloudformation/template.yml
AWSTemplateFormatVersion: "2010-09-09"
Parameters:
  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Default: DukeLegion
  InstanceTypeParameter:
    Type: String
    Default: t3.small
    AllowedValues:
      - t3.small
      - t3.micro
    Description: Enter instance size.
  AMI:
    Type: String
    Default: ami-07ebfd5b3428b6f4d
  KeepAlivePassword:
    Type: String
    NoEcho: true
  OctopusServer:
    Type: String
  OctopusAPIKey:
    Type: String
    NoEcho: true
  OctopusSpace:
    Type: String
  OctopusEnvironment:
    Type: String
  TomcatPassword:
    Type: String
    NoEcho: true
  LoadBalancer1IP:
    Type: String
    Default: 10.0.0.20
  LoadBalancer2IP:
    Type: String
    Default: 10.0.0.21
  PostgresMasterPassword:
    Type: String
    Description: The password for the master user
    MinLength: 8
    ConstraintDescription: Must be a string of length >= 8
    Default: postgres
    NoEcho: true
Resources:

  # This role allows an EIP address to be reassociated
  EIPMovePolicy:
    Type: 'AWS::IAM::ManagedPolicy'
    Properties:
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Sid: ReassignEIP
            Effect: Allow
            Resource: "*"
            Action:
              - 'ec2:AssociateAddress'
              - 'ec2:DescribeInstances'
              - 'ec2:DescribeAddresses'
              - 'ec2:DisassociateAddress'
  EIPMoveRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - 'sts:AssumeRole'
      Path: /
      ManagedPolicyArns:
        - !Ref EIPMovePolicy
  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref EIPMoveRole

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        -
          Key: Name
          Value: Tomcat HA VPC
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  VPCGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  SubnetA:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      VpcId: !Ref VPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
  SubnetB:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      VpcId: !Ref VPC
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  InternetRoute:
    Type: AWS::EC2::Route
    DependsOn: InternetGateway
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref RouteTable
  SubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref RouteTable
      SubnetId: !Ref SubnetA

  PostgresComponentSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub 'PostgresSQL Security Group'
      GroupDescription: Security Group granting access to the tomcat instances
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          SourceSecurityGroupId: !Ref TomcatSecurityGroup

  PostgresSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: !Sub 'Database subnet group for ${AWS::StackName}'
      SubnetIds:
        - !Ref SubnetA
        - !Ref SubnetB

  Postgres:
    Type: AWS::RDS::DBInstance
    Properties:
      AllocatedStorage: 10
      AllowMajorVersionUpgrade: false
      AutoMinorVersionUpgrade: true
      DBSubnetGroupName: !Ref PostgresSubnetGroup
      Engine: postgres
      # https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_PostgreSQL.html
      EngineVersion: "11.6"
      MasterUsername: "postgres"
      MasterUserPassword: !Ref PostgresMasterPassword
      DBName: "postgres"
      DBInstanceClass: "db.t3.small"
      BackupRetentionPeriod: 1
      MultiAZ: false
      VPCSecurityGroups:
        - !Ref PostgresComponentSG
      PubliclyAccessible: true
      DBInstanceIdentifier: !Sub '${AWS::StackName}'
      StorageEncrypted: false

  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Web access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: !Sub '0.0.0.0/0'
  TomcatSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable Web access
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '8443'
          ToPort: '8443'
          CidrIp: !Sub '0.0.0.0/0'
        - IpProtocol: tcp
          FromPort: '8009'
          ToPort: '8009'
          SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup
  TomcatOneENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Description: Tomcat 1 network interface
      SourceDestCheck: 'false'
      GroupSet:
        - Ref: TomcatSecurityGroup
      SubnetId: !Ref SubnetA
      PrivateIpAddress: 10.0.0.10
  TomcatOne:
    Type: 'AWS::EC2::Instance'
    Properties:
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref TomcatOneENI
          DeviceIndex: 0
      ImageId: !Ref AMI
      InstanceType:
        Ref: InstanceTypeParameter
      KeyName: !Ref KeyPair
      Tags:
        -
          Key: Name
          Value: !Sub "Tomcat 1 ${OctopusEnvironment}"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -x
          sudo apt-get install git -y
          git clone https://github.com/mcasperson/TomcatHA.git
          cd TomcatHA
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_postgres_user=postgres FACTER_postgres_pass=${PostgresMasterPassword} FACTER_postgres_server=${Postgres.Endpoint.Address} bash -s postgres.pp
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_postgres_user=postgres FACTER_postgres_pass=${PostgresMasterPassword} FACTER_postgres_server=${Postgres.Endpoint.Address} FACTER_tomcat_name=worker1 FACTER_tomcat_password=${TomcatPassword} bash -s tomcat.pp
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_tentacle_name=tomcat1-${OctopusEnvironment} FACTER_octopus_role=tomcat FACTER_octopus_environment=${OctopusEnvironment} FACTER_octopus_server=${OctopusServer} "FACTER_octopus_space=${OctopusSpace}" FACTER_octopus_api_key=${OctopusAPIKey} bash -s tentacle.pp
  TomcatTwoENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Description: Tomcat 1 network interface
      SourceDestCheck: 'false'
      GroupSet:
        - Ref: TomcatSecurityGroup
      SubnetId: !Ref SubnetA
      PrivateIpAddress: 10.0.0.11
  TomcatTwo:
    Type: 'AWS::EC2::Instance'
    Properties:
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref TomcatTwoENI
          DeviceIndex: 0
      ImageId: !Ref AMI
      InstanceType:
        Ref: InstanceTypeParameter
      KeyName: !Ref KeyPair
      Tags:
        -
          Key: Name
          Value: !Sub "Tomcat 2 ${OctopusEnvironment}"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -x
          sudo apt-get install git -y
          git clone https://github.com/mcasperson/TomcatHA.git
          cd TomcatHA
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_postgres_user=postgres FACTER_postgres_pass=${PostgresMasterPassword} FACTER_postgres_server=${Postgres.Endpoint.Address} FACTER_tomcat_name=worker2 FACTER_tomcat_password=${TomcatPassword} bash -s tomcat.pp
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_tentacle_name=tomcat2-${OctopusEnvironment} FACTER_octopus_role=tomcat FACTER_octopus_environment=${OctopusEnvironment} FACTER_octopus_server=${OctopusServer} "FACTER_octopus_space=${OctopusSpace}" FACTER_octopus_api_key=${OctopusAPIKey}  bash -s tentacle.pp
  LoadBalancerOneENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Description: Tomcat 1 network interface
      SourceDestCheck: 'false'
      GroupSet:
        - Ref: LoadBalancerSecurityGroup
      SubnetId: !Ref SubnetA
      PrivateIpAddress: 10.0.0.20
  LoadBalancerOne:
    Type: 'AWS::EC2::Instance'
    Properties:
      IamInstanceProfile: !Ref InstanceProfile
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref LoadBalancerOneENI
          DeviceIndex: 0
      ImageId: !Ref AMI
      InstanceType:
        Ref: InstanceTypeParameter
      KeyName: !Ref KeyPair
      Tags:
        -
          Key: Name
          Value: !Sub "Apache2 Load Balancer 1 ${OctopusEnvironment}"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -x
          sudo apt-get install git -y
          git clone https://github.com/mcasperson/TomcatHA.git
          cd TomcatHA
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_worker1_ip=${TomcatOneENI.PrimaryPrivateIpAddress} FACTER_worker2_ip=${TomcatTwoENI.PrimaryPrivateIpAddress} bash -s apachelb.pp
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_loadbalancer_name=loadbalancer1 FACTER_loadbalancer_priority=101 FACTER_keepalive_pass=${KeepAlivePassword} FACTER_loadbalancer_ip=${LoadBalancer1IP} FACTER_other_loadbalancer_ip=${LoadBalancer2IP} FACTER_lb1_dns=ip-10-0-0-20.ec2.internal FACTER_lb2_dns=ip-10-0-0-21.ec2.internal FACTER_eip_allocation=${WebElasticIp.AllocationId} bash -s keepalived.pp
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_tentacle_name=loadbalancer1-${OctopusEnvironment} FACTER_octopus_role=loadbalancer FACTER_octopus_environment=${OctopusEnvironment} FACTER_octopus_server=${OctopusServer} "FACTER_octopus_space=${OctopusSpace}" FACTER_octopus_api_key=${OctopusAPIKey}  bash -s tentacle.pp
  LoadBalancerTwoENI:
    Type: AWS::EC2::NetworkInterface
    Properties:
      Description: Tomcat 1 network interface
      SourceDestCheck: 'false'
      GroupSet:
        - Ref: LoadBalancerSecurityGroup
      SubnetId: !Ref SubnetA
      PrivateIpAddress: 10.0.0.21
  LoadBalancerTwo:
    Type: 'AWS::EC2::Instance'
    Properties:
      IamInstanceProfile: !Ref InstanceProfile
      NetworkInterfaces:
        - NetworkInterfaceId: !Ref LoadBalancerTwoENI
          DeviceIndex: 0
      ImageId: !Ref AMI
      InstanceType:
        Ref: InstanceTypeParameter
      KeyName: !Ref KeyPair
      Tags:
        -
          Key: Name
          Value: !Sub "Apache2 Load Balancer 2 ${OctopusEnvironment}"
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash -x
          sudo apt-get install git -y
          git clone https://github.com/mcasperson/TomcatHA.git
          cd TomcatHA
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_worker1_ip=${TomcatOneENI.PrimaryPrivateIpAddress} FACTER_worker2_ip=${TomcatTwoENI.PrimaryPrivateIpAddress} bash -s apachelb.pp
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_loadbalancer_name=loadbalancer2 FACTER_loadbalancer_priority=100 FACTER_keepalive_pass=${KeepAlivePassword} FACTER_loadbalancer_ip=${LoadBalancer2IP} FACTER_other_loadbalancer_ip=${LoadBalancer1IP} FACTER_lb1_dns=ip-10-0-0-20.ec2.internal FACTER_lb2_dns=ip-10-0-0-21.ec2.internal FACTER_eip_allocation=${WebElasticIp.AllocationId} bash -s keepalived.pp
          curl -s -L https://raw.githubusercontent.com/OctopusSamples/TomcatHA/master/install.sh | FACTER_tentacle_name=loadbalancer2-${OctopusEnvironment} FACTER_octopus_role=loadbalancer FACTER_octopus_environment=${OctopusEnvironment} FACTER_octopus_server=${OctopusServer} "FACTER_octopus_space=${OctopusSpace}" FACTER_octopus_api_key=${OctopusAPIKey}  bash -s tentacle.pp
  WebElasticIp:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

Outputs:
  VPCID:
    Value: !Ref VPC
    Description: VPC ID
  SubnetAID:
    Value: !Ref SubnetA
    Description: Subnet A ID
  SubnetBID:
    Value: !Ref SubnetB
    Description: Subnet B ID
  LoadBalancerOnePublicIp:
    Value:
      Fn::GetAtt:
        - LoadBalancerOne
        - PublicIp
    Description: Load Balancer One PublicIp Address
  LoadBalancerTwoPublicIp:
    Value:
      Fn::GetAtt:
        - LoadBalancerTwo
        - PublicIp
    Description: Load Balancer Two PublicIp Address
  TomcatOnePublicIp:
    Value:
      Fn::GetAtt:
        - LoadBalancerOne
        - PublicIp
    Description: Load Balancer One PublicIp Address
  TomcatTwoPublicIp:
    Value:
      Fn::GetAtt:
        - LoadBalancerTwo
        - PublicIp
    Description: Load Balancer Two PublicIp Address
  EndpointAddress:
    Description: Connection endpoint of the database
    Value: !GetAtt Postgres.Endpoint.Address
    Export:
      Name: !Sub '${AWS::StackName}-EndpointAddress'
